# libfresample

./: .gitignore  .header  LICENSE.txt  Makefile.am  Makefile.in  README.md  README.txt  autogen.sh  comparison.txt  config.mak.in  configure-universal  configure.ac  fresample-Info.plist  genmake.py  libfresample.sln  libfresample_static.vcxproj
LibFResample.xcodeproj/: project.pbxproj
LibFResample_Xcode3.xcodeproj/: project.pbxproj
include/: .header  fresample.h
lib/: .header  calculate.c  calculate.h  convert.h  cpu.c  cpu.h  defs.h  filter.h  filter_delay.c  filter_free.c  filter_get.c  filter_memsize.c  filter_new.c  filter_new_window.c  filter_size.c  info_name.c  param.c  param.h  param_name.c  resample.c  resample.h  resample_s16func.c  resample_s16n1f32_altivec.c  resample_s16n1f32_scalar.c  resample_s16n1f32_sse2.c  resample_s16n1s16_altivec.c  resample_s16n1s16_scalar.c  resample_s16n1s16_sse2.c  resample_s16n2f32_altivec.c  resample_s16n2f32_scalar.c  resample_s16n2f32_sse2.c  resample_s16n2s16_altivec.c  resample_s16n2s16_scalar.c  resample_s16n2s16_sse2.c  s16.h  s16_free.c  s16_new_lowpass.c  s16_new_preset.c  s16_new_resample.c  s16_new_sinc.c  (+10 more)
src/: .header  audio.c  audio.h  audio_format.c  audio_rate.c  audio_raw_load.c  audio_wav_check.c  audio_wav_load.c  audio_wav_save.c  binary.h  common.c  common.h  file.c  file.h  main.c  riff.c  riff.h
tests/: .gitignore  benchmark.py  common.py  dumpspecs.py  genmake.py  quality.py  test-correct.sh  test-sweep.py  test.sh.in
